# dvc-run

./: .gitignore  DVC_LOCK_SUPPORT.md  EXAMPLES.md  PARALLEL_EXECUTION.md  README.md  UPSTREAM.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
dvc_run/: cli.py  dag.py  dvc.py  executor.py  freshness.py  lock.py  parser.py  stage.py  viz.py
example/: README.md
example-basic/: .gitignore  dvc.yaml
example-parallel-heavy/: .gitignore  README.md  dvc.yaml
tests/: test_dag.py  test_integration.py  test_lock.py  test_parser.py
